<resources>
    <string name="app_name">JustoTest</string>
    <string name="main_error">Ocurrio un error, intenta más tarde</string>
    <string name="profile_photo_cd">profile photo</string>
    <string name="profile_gender_cd">gender %s</string>
    <string name="profile_location_cd">gender %s</string>
    <string name="about_title">Acerca de mi</string>
    <string name="about_username_cd">username</string>
    <string name="about_username">\@%s</string>
    <string name="about_birth_date">%s</string>
    <string name="about_member_since">Miembro desde: %s</string>
    <string name="contact_title">Información de contacto</string>
    <string name="contact_phone_cd">phone number</string>
    <string name="contact_email_cd">email</string>
    <string name="main_button_next">Siguiente perfil</string>
</resources>