<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/sv_main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            tools:context=".ui.MainActivity">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="16dp">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/iv_profile_photo"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:contentDescription="@string/profile_photo_cd"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
                    tools:src="@drawable/ic_launcher_background" />

                <ImageView
                    android:id="@+id/iv_profile_gender"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:contentDescription="@string/profile_gender_cd"
                    app:layout_constraintBottom_toBottomOf="@id/iv_profile_photo"
                    app:layout_constraintEnd_toEndOf="@id/iv_profile_photo"
                    tools:src="@drawable/ic_male" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tv_profile_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:text="Thomas Jake" />

            <TextView
                android:id="@+id/tv_profile_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="14sp"
                tools:text="Serbia" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cv_address_info"
                style="@style/Widget.Material3.CardView.Outlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/profile_location_cd"
                        android:src="@drawable/ic_address" />

                    <TextView
                        android:id="@+id/tv_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:textAlignment="center"
                        android:textColor="?attr/colorPrimary"
                        app:layout_constraintEnd_toEndOf="parent"
                        tools:text="9669 Slavka Subotića, Novi Sad" />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cv_about_info"
                style="@style/Widget.Material3.CardView.Filled"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp">

                    <TextView
                        android:id="@+id/tv_about_info_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="8dp"
                        android:text="@string/about_title"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/iv_about_info_username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/about_username_cd"
                        android:src="@drawable/ic_user"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_about_info_title" />

                    <TextView
                        android:id="@+id/tv_about_info_username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="@id/iv_about_info_username"
                        app:layout_constraintStart_toEndOf="@id/iv_about_info_username"
                        app:layout_constraintTop_toTopOf="@id/iv_about_info_username"
                        tools:text="\@orangewolf234" />

                    <TextView
                        android:id="@+id/tv_about_info_birth_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:textSize="16sp"
                        app:layout_constraintTop_toBottomOf="@id/iv_about_info_username"
                        tools:text="Fecha de nacimiento, 19 de agosto, 1945" />

                    <TextView
                        android:id="@+id/tv_about_info_register_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:textSize="16sp"
                        app:layout_constraintTop_toBottomOf="@id/tv_about_info_birth_date"
                        tools:text="Miembro desde 22 de enero, 2017" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cv_contact_info"
                style="@style/Widget.Material3.CardView.Filled"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp">

                    <TextView
                        android:id="@+id/tv_contact_info_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="8dp"
                        android:text="@string/contact_title"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/iv_contact_info_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:contentDescription="@string/contact_phone_cd"
                        android:src="@drawable/ic_phone"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_contact_info_title" />

                    <TextView
                        android:id="@+id/tv_contact_info_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="@id/iv_contact_info_phone"
                        app:layout_constraintStart_toEndOf="@id/iv_contact_info_phone"
                        app:layout_constraintTop_toTopOf="@id/iv_contact_info_phone"
                        tools:text="038-4155-118" />


                    <ImageView
                        android:id="@+id/iv_contact_info_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:contentDescription="@string/contact_email_cd"
                        android:src="@drawable/ic_email"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/iv_contact_info_phone" />

                    <TextView
                        android:id="@+id/tv_contact_info_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="@id/iv_contact_info_email"
                        app:layout_constraintStart_toEndOf="@id/iv_contact_info_email"
                        app:layout_constraintTop_toTopOf="@id/iv_contact_info_email"
                        tools:text="natalia.krasic@example.com" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_next_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="32dp"
                android:text="@string/main_button_next" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/cpi_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tv_main_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_error"
        android:textSize="18sp"
        android:visibility="gone" />
</androidx.appcompat.widget.LinearLayoutCompat>
